src/objects/RackRateTable__c.object
<CustomObject>
    <description>Rackrate</description>
    <fields>
        <fullName>BasePlanRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ベースプラン</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>ラックレート</relationshipLabel>
        <relationshipName>BasePlanRefd0Oo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Persons__c</fullName>
        <label>人数</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>金額</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RoomTypeRel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>部屋タイプ</label>
        <referenceTo>TypeOfRooms__c</referenceTo>
        <relationshipName>RoomTypeRel</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesStatus__c</fullName>
        <label>販売状態</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>販売中</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>停止中</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SearchKey__c</fullName>
        <description>Tier + &quot;_&quot; + 部屋タイプID  + &quot;_&quot; + 人数
トリガーで自動する</description>
        <externalId>true</externalId>
        <label>SearchKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tier1</fullName>
                </value>
                <value>
                    <fullName>Tier2</fullName>
                </value>
                <value>
                    <fullName>Tier3</fullName>
                </value>
                <value>
                    <fullName>Tier4</fullName>
                </value>
                <value>
                    <fullName>Tier5</fullName>
                </value>
                <value>
                    <fullName>Tier6</fullName>
                </value>
                <value>
                    <fullName>Tier7</fullName>
                </value>
                <value>
                    <fullName>Tier8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ラックレート</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>ラックレート番号</label>
        <type>AutoNumber</type>
    </nameField>
    <recordTypes>
        <fullName>Dayuse</fullName>
        <active>true</active>
        <label>Dayuse</label>
    </recordTypes>
    <recordTypes>
        <fullName>Nightuse</fullName>
        <active>true</active>
        <label>Nightuse</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>